# StudentPortal

./: LICENSE  README.md  docker-compose.yml
sp_backend/: Makefile  pyproject.toml
sp_backend/alembic/: env.py
sp_backend/alembic/versions/: 041ace4e5956_update_table_user.py  0d21c80809fa_create_table_user.py  24cfbecf5bed_create_table_forum.py  7cba3f075e8c_init_tables.py  9a760c1f6d42_init_tables.py  a304333c3fe1_create_table_user.py
sp_backend/docker/: docker-compose.yml
sp_backend/scripts/: seed.py
sp_backend/src/sp_backend/: main.py  web_app.py
sp_backend/src/sp_backend/constants/: announcement.py  content_type.py  embedding.py  forum.py  question.py  user.py
sp_backend/src/sp_backend/core/: __init__.py  config.py
sp_backend/src/sp_backend/db/: base.py  session.py
sp_backend/src/sp_backend/dependencies/: auth.py
sp_backend/src/sp_backend/middlewares/: db_middleware.py
sp_backend/src/sp_backend/models/: __init__.py  announcement.py  comment.py  content_daily_view.py  content_view.py  forum.py  question.py  reaction.py  user.py
sp_backend/src/sp_backend/routers/: announcement_router.py  forum_router.py  health_router.py  user_router.py
sp_backend/src/sp_backend/schemas/announcement/: create_announcement_schema.py
sp_backend/src/sp_backend/schemas/forum/: create_forum_schema.py
sp_backend/src/sp_backend/schemas/user/: user_claims.py  user_signin_schema.py
sp_backend/src/sp_backend/services/announcement/: create_announcement_service.py
sp_backend/src/sp_backend/services/user/: exception.py  (+1 more)
sp_backend/src/sp_backend/utils/: jwt.py
(+32 files in other folders)
